Added query structure for searching through a program.